--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -28,7 +30,7 @@
       <section>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h2>Strategy</h2>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -61,22 +63,42 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img-1.jpg" alt="Mark Guerrero" />
+            <img
+              src="./images/img-1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" alt="Tom Ford" />
+            <img
+              src="./images/img-2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img-3.jpg" alt="Camila Garcia" />
+            <img
+              src="./images/img-3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img-4.jpg" alt="Daniel Wilson" />
+            <img
+              src="./images/img-4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
