--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Missed element</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -107,7 +108,7 @@
     </main>
     <footer>
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
       </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
